# feup-aed1

./: .gitignore  CMakeLists.txt  README.md
src/: ClassUC.cpp  ClassUC.h  DataManager.cpp  DataManager.h  Menu.cpp  Menu.h  main.cpp  sloth.cpp  sloth.h  student.cpp  student.h  turma.cpp  turma.h  uc.cpp  uc.h
